--- a/browser/themes/shared/identity-block/identity-block.css
+++ b/browser/themes/shared/identity-block/identity-block.css
@@ -39,7 +39,7 @@
 
 .identity-box-button {
   padding-inline: var(--urlbar-icon-padding);
-  border-radius: var(--urlbar-icon-border-radius);
+  border-radius: var(--urlbar-inner-border-radius);
 }
 
 .identity-box-button,
@@ -86,7 +86,7 @@
   background-color: var(--urlbar-box-bgcolor);
   color: var(--urlbar-box-text-color);
   padding-inline: 8px;
-  border-radius: var(--urlbar-icon-border-radius);
+  border-radius: var(--urlbar-inner-border-radius);
 }
 
 #urlbar[focused] {
@@ -255,7 +255,7 @@
 
 #tracking-protection-icon-container {
   padding-inline: var(--urlbar-icon-padding);
-  border-radius: var(--urlbar-icon-border-radius);
+  border-radius: var(--urlbar-inner-border-radius);
   /* This is needed in order to position the blue dot indicator. */
   position: relative;
 }
@@ -301,7 +301,7 @@
 
   #trust-icon-container {
     padding-inline: var(--urlbar-icon-padding);
-    border-radius: var(--urlbar-icon-border-radius);
+    border-radius: var(--urlbar-inner-border-radius);
     margin-inline-end: var(--identity-box-margin-inline);
     -moz-context-properties: fill, fill-opacity;
 
