--- a/browser/themes/shared/urlbar-searchbar.css
+++ b/browser/themes/shared/urlbar-searchbar.css
@@ -481,7 +481,7 @@
   color: var(--urlbar-box-text-color);
   margin-inline-end: 8px;
   align-items: center;
-  border-radius: var(--urlbar-icon-border-radius);
+  border-radius: var(--urlbar-inner-border-radius);
   padding-inline: 8px 6px;
 
   #urlbar[focused] > .urlbar-input-container > & {
@@ -502,7 +502,7 @@
   -moz-context-properties: fill, fill-opacity;
   fill-opacity: 0.6;
   fill: currentColor;
-  border-radius: var(--urlbar-icon-border-radius);
+  border-radius: var(--urlbar-inner-border-radius);
   flex-shrink: 0;
 
   @media (prefers-contrast) {
@@ -588,7 +588,7 @@
 .search-go-button {
   width: calc(var(--urlbar-min-height) - 2px /* border */ - 2 * var(--urlbar-container-padding));
   height: calc(var(--urlbar-min-height) - 2px /* border */ - 2 * var(--urlbar-container-padding));
-  border-radius: var(--urlbar-icon-border-radius);
+  border-radius: var(--urlbar-inner-border-radius);
   padding: var(--urlbar-icon-padding);
   color: inherit;
   outline: var(--toolbarbutton-outline);
@@ -758,7 +758,7 @@
 #cfr-label-container {
   width: 0;
   overflow: hidden;
-  border-radius: var(--urlbar-icon-border-radius);
+  border-radius: var(--urlbar-inner-border-radius);
   padding-inline-start: 28px;
   mask-image: linear-gradient(to right, transparent 0, black 0);
   mask-position-x: var(--cfr-label-width);
@@ -943,7 +943,7 @@
   appearance: none;
   font-size: 0.8em;
   padding: 3px 7px;
-  border-radius: var(--urlbar-icon-border-radius);
+  border-radius: var(--urlbar-inner-border-radius);
   background-color: var(--urlbar-box-bgcolor);
   color: var(--urlbar-box-text-color);
   margin-block: calc((var(--urlbar-min-height) - 20px) / 2 - 1px /* border */ - var(--urlbar-container-padding));
@@ -1117,7 +1117,7 @@
 
 .searchmode-switcher {
   appearance: none;
-  border-radius: var(--urlbar-icon-border-radius);
+  border-radius: var(--urlbar-inner-border-radius);
   margin: 0;
   margin-inline-end: var(--urlbar-searchmodeswitcher-margin-inline-end);
   padding-inline: var(--urlbar-searchmodeswitcher-inline-padding);
@@ -1166,7 +1166,7 @@
 .searchmode-switcher-chicklet {
   background-color: var(--urlbar-box-bgcolor);
   border-start-end-radius: var(--toolbarbutton-border-radius);
-  border-end-end-radius: var(--urlbar-icon-border-radius);
+  border-end-end-radius: var(--urlbar-inner-border-radius);
   align-items: center;
   height: 100%;
   max-width: 40%;
