--- a/browser/themes/shared/urlbarView.css
+++ b/browser/themes/shared/urlbarView.css
@@ -20,7 +20,7 @@
 
   --urlbarView-small-font-size: 0.85em;
 
-  --urlbarView-results-padding: 4px;
+  --urlbarView-results-padding: 7px;
   --urlbarView-row-gutter: 2px;
   --urlbarView-item-inline-padding: var(--urlbar-icon-padding);
   --urlbarView-item-block-padding: 6px;
@@ -97,10 +97,8 @@
   display: block;
   text-shadow: none;
   overflow: clip;
-  margin-inline: calc(5px + var(--urlbar-container-padding));
-  width: calc(100% - 2 * (5px + var(--urlbar-container-padding)));
-  /* Match urlbar-background's border. */
-  border-inline: 1px solid transparent;
+  margin-inline: var(--urlbarView-results-padding);
+  width: calc(100% - 2 * var(--urlbarView-results-padding));
 }
 
 .urlbarView-body-inner {
@@ -113,7 +111,7 @@
 }
 
 .urlbarView-results {
-  padding-block: var(--urlbarView-results-padding);
+  padding-block: calc(var(--urlbarView-results-padding) - var(--urlbarView-row-gutter));
   white-space: nowrap;
 
   /* Vertically center the one-offs when no results are present. */
@@ -151,7 +149,7 @@
      hover area is contiguous and a row is always hovered as the user moves the
      mouse across rows, even though each row's highlighted area is smaller. */
   border: var(--urlbarView-row-gutter) solid transparent;
-  border-radius: calc(var(--urlbarView-row-gutter) + var(--toolbarbutton-border-radius));
+  border-radius: calc(var(--urlbarView-row-gutter) + var(--urlbar-inner-border-radius));
   background-clip: padding-box;
 
   /* Must hide the overflowing rows while the view is updating */
@@ -480,7 +478,7 @@
 
 .urlbarView-button:where(:not(:empty):not(.urlbarView-button-result-menu)),
 .urlbarView-splitbutton-dropmarker {
-  border-radius: var(--toolbarbutton-border-radius);
+  border-radius: var(--urlbar-inner-border-radius);
   padding: 0.5em 1em;
   font-size: 0.93em;
   font-weight: var(--font-weight-bold);
